--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Whack A Mole!</title>
+    <title>Whack A Cooler!</title>
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Whack-a-mole!</h1>
+    <h1>Whack-a-Cooler!</h1>
     <h1 class="score"> 0</h1>
         <div class = "start">
             <button onClick="initGame()">Start!</button>
