random pic works only for hole 1

--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         </div>
         <div class="game">
             <div class="hole hole1">
-                <div class="mole"></div>
+                <div class="mole" id="cooler" >x</div>
             </div>
             <div class="hole hole2">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole3">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole4">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole5">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole6">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole7">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole8">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
             <div class="hole hole9">
-                <div class="mole"></div>
+                <div class="mole" id="cooler"></div>
             </div>
     </div>
     <script src="game.js"></script>
